--- a/third/style.css
+++ b/third/style.css
@@ -6,12 +6,14 @@ body {
 header {
 	height: 100px;
 	background-color: lightgray;
+	
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 nav {
-	width: 90px;
-	height: 90px;
-	
+	width: 100px;
+	height: 100px;
 	margin-left: 30px;
 }
 
